# daily_stock_analysis

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: ai_review.py
.github/workflows/: auto-tag.yml  ci.yml  daily_analysis.yml  docker-publish.yml  ghcr-dockerhub.yml  network-smoke.yml  pr-review.yml  stale.yml
apps/dsa-web/src/utils/: validation.ts
bot/commands/: ask.py  market.py
data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  efinance_fetcher.py  kr_index_mapping.py  pykrx_fetcher.py  pytdx_fetcher.py  tushare_fetcher.py  us_index_mapping.py
docker/: Dockerfile
docs/superpowers/plans/: 2026-03-27-kr-us-market-migration.md
src/: analyzer.py  config.py  notification.py
src/core/: market_profile.py  market_review.py  market_strategy.py  trading_calendar.py
strategies/: bottom_volume.yaml  box_oscillation.yaml  bull_trend.yaml  chan_theory.yaml  dragon_head.yaml  emotion_cycle.yaml  ma_golden_cross.yaml  one_yang_three_yin.yaml  shrink_pullback.yaml  volume_breakout.yaml  wave_theory.yaml
tests/: test_akshare_realtime_logging.py  test_data_fetcher_prefetch_stock_names.py  test_fetcher_logging.py  test_kr_index_mapping.py  test_kr_market_profile.py  test_kr_stock_detection.py  test_kr_trading_calendar.py  test_market_analyzer_generate_text.py  test_market_strategy.py  test_pykrx_fetcher.py  test_stock_code_bse.py  test_us_index_mapping.py
